fix: paciente controlle